maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: not found: value global
  	global sommeAngle
        ^